--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             - .
 
       # - run: npm run test
-      # - run: npm run lint
+      - run: npm run lint
 
   release:
     docker:
