--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,12 @@
+defaults: &defaults
+  docker:
+    - image: circleci/node:latest
+  working_directory: ~/snapit-landing2
+
 version: 2
 jobs:
   testing:
-    docker:
-      - image: circleci/node:latest
-
-    working_directory: ~/snapit-server2
-
+    <<: *defaults
     steps:
       - checkout
 
@@ -23,9 +24,7 @@ jobs:
       - run: npm run lint
 
   release:
-    docker:
-      - image: circleci/node:latest
-
+    <<: *defaults
     steps:
 
       - attach_workspace:
@@ -68,9 +67,7 @@ jobs:
             - .
 
   deploy:
-    docker:
-      - image: circleci/node:latest
-
+    <<: *defaults
     steps:
 
       - attach_workspace:
