--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,7 @@ jobs:
       - run:
           name: Push version tag to github
           command: |
+            git pull
             echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
             git push -q https://$GITHUB_TOKEN@github.com/aimarjs/snapit-server.git $CIRCLE_BRANCH
             git push --tags
