--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: circleci/node:latest
 
-    working_directory: ~/snapit-server2
+    working_directory: ~/snapit-server
 
     steps:
       - checkout
@@ -28,7 +28,7 @@ jobs:
     steps:
 
       - attach_workspace:
-          at: ~/snapit-server2
+          at: ~/snapit-server
 
       - setup_remote_docker:
           docker_layer_caching: true
@@ -37,7 +37,6 @@ jobs:
           command: |
             git config --global user.email $GITHUB_EMAIL
             git config --global user.name $GITHUB_USER
-            ls -la
             npm version patch -m "version %s [skip ci]"
 
       - run:
@@ -73,7 +72,7 @@ jobs:
     steps:
 
       - attach_workspace:
-          at: ~/snapit-server2
+          at: ~/snapit-server
 
       - run:
           name: Deploy app
