--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
       - run:
           name: Push version tag to github
           command: |
-            echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
+            # echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
             git push -q https://$GITHUB_TOKEN@github.com/aimarjs/snapit-server.git $CIRCLE_BRANCH
             git push --tags
 
@@ -69,7 +69,7 @@ jobs:
     docker:
       - image: circleci/node:latest
     working_directory: ~/snapit-server
-    
+
     steps:
 
       - attach_workspace:
