--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,8 @@ jobs:
       - run:
           name: Push version tag to github
           command: |
-            # echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
+            echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
+            git push
             git push --tags
 
       - persist_to_workspace:
