--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snapit-server",
   "version": "0.0.11",
-  "description": "This is snapit server",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
